// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-media-multiple should continue processing on individual file errors 1`] = `
{
  "content": [],
  "structuredContent": {
    "results": [
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "_Test Batch Image 1",
        "success": true,
      },
      {
        "error": "File path "/non/existent/file.jpg" is not in an allowed directory. Allowed directories: /Users/philw/Projects/umbraco-mcp-template",
        "name": "_Test Batch Image 2",
        "success": false,
      },
    ],
    "summary": "Processed 2 files: 1 succeeded, 1 failed",
  },
}
`;

exports[`create-media-multiple should create multiple files with mixed media types 1`] = `
{
  "content": [],
  "structuredContent": {
    "results": [
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "_Test Mixed Image",
        "success": true,
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "_Test Mixed File",
        "success": true,
      },
    ],
    "summary": "Processed 2 files: 2 succeeded, 0 failed",
  },
}
`;

exports[`create-media-multiple should create multiple images in batch 1`] = `
{
  "content": [],
  "structuredContent": {
    "results": [
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "_Test Batch Image 1",
        "success": true,
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "_Test Batch Image 2",
        "success": true,
      },
    ],
    "summary": "Processed 2 files: 2 succeeded, 0 failed",
  },
}
`;

exports[`create-media-multiple should create multiple media from URLs 1`] = `
{
  "content": [],
  "structuredContent": {
    "results": [
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "_Test URL Batch Image 1",
        "success": true,
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "_Test URL Batch Image 2",
        "success": true,
      },
    ],
    "summary": "Processed 2 files: 2 succeeded, 0 failed",
  },
}
`;

exports[`create-media-multiple should handle batch size limit validation 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "Batch upload limited to 20 files per call. You provided 21 files. Please split into multiple batches.",
  },
}
`;

exports[`create-media-multiple should use default File media type when not specified 1`] = `
{
  "content": [],
  "structuredContent": {
    "results": [
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "_Test Batch File 1",
        "success": true,
      },
    ],
    "summary": "Processed 1 files: 1 succeeded, 0 failed",
  },
}
`;
